adding README.md file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             <a href="#work">My Work</a>
             <a href="#contact">Contact Me</a>   
             <a href="#contact">Resume</a>   
-
         </nav>
     </header>
 
@@ -69,14 +68,14 @@
           </div>
         </a>
         <!-- Project #3 -->
-        <a href="https://www.actionnetwork.com/" class="grid-item portfolio">
+        <a href="http://adamromano.net/" class="grid-item portfolio">
           <div>
             <h3>Portfolio</h3>
             <span>HTML, CSS</span>
           </div>
         </a>
          <!-- Project #4 -->
-        <a href="https://www.actionnetwork.com/about/" class="grid-item run-buddy">
+        <a href="http://adamromano.net//" class="grid-item run-buddy">
           <div>
             <h3>Run Buddy</h3>
             <span>HTML,CSS</span>
@@ -91,7 +90,6 @@
         </a>
       </div>
     </section>
-
     
     <!-- Contact -->
     <section class="page-section contact" id="contact">
@@ -124,7 +122,6 @@
         </address>
       </div>
     </section>
-
    <!-- Footer -->
     <footer>
     <p>Made by <a href="https://github.com/AdamRomano89" target="_blank">Adam Romano</a></p>
