--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
           </div>
         </a>
          <!-- Project #4 -->
-        <a href="http://adamromano.net//" class="grid-item run-buddy">
+        <a href="https://github.com/AdamRomano89" class="grid-item hacker">
           <div>
-            <h3>Run Buddy</h3>
+            <h3>Hacker</h3>
             <span>HTML,CSS</span>
           </div>
         </a>
          <!-- Project #5 -->
-        <a href="https://pokemon-fullstack.herokuapp.com/" class="grid-item run-buddy">
+        <a href="https://github.com/AdamRomano89" class="grid-item password">
           <div>
-            <h3>Run Buddy</h3>
+            <h3>Password</h3>
             <span>HTML, CSS</span>
           </div>
         </a>
