--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#about">About Me</a>
             <a href="#work">My Work</a>
             <a href="#contact">Contact Me</a>   
-            <a href="#contact">Resume</a>   
+            <a href="./assets/images/Adam-Romano.docx">Resume</a>   
         </nav>
     </header>
 
