fixing about me section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h2>About Me</h2>
       <div>
         <p>
-          I am a hardworking and ambitious individual with a great passion for web development. I am currently studying Full-Stack Web engineering at UT, and I am also perparing myself my MS degree in Software Engineering. I love learning new skills and sharing my knowledge with others. I'm also working on expanding my knowedge to include several Back-End programming languages.
+          I am a hardworking and ambitious individual with a great passion for software development. I am currently studying Full-Stack Software engineering at UT, I am also perparing myself for my MS degree in Software Engineering. I love learning new skills and sharing my knowledge with others. I'm also working on expanding my knowedge to include several Back-End programming languages.
         </p>
       </div>
     </section> 
