--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
           </div>
         </a>
          <!-- Project #4 -->
-        <a href="https://github.com/AdamRomano89" class="grid-item hacker">
+        <a href="https://adamromano89.github.io/recipe-app/" class="grid-item recipe">
           <div>
-            <h3>Hacker</h3>
-            <span>HTML,CSS</span>
+            <h3>Git-A-Recipe</h3>
+            <span>HTML, CSS, JavaScript</span>
           </div>
         </a>
          <!-- Project #5 -->
-        <a href="https://github.com/AdamRomano89" class="grid-item password">
+        <a href="https://adamromano89.github.io/weather_dashboard/" class="grid-item weather">
           <div>
-            <h3>Password</h3>
-            <span>HTML, CSS</span>
+            <h3>Weather App</h3>
+            <span>HTML, CSS, JavaScript</span>
           </div>
         </a>
       </div>
