--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
           </div>
         </a>
         <!-- Project #2 -->
-        <a href="https://www.adamromano.net/" class="grid-item horiseon">
+        <a href="https://byteme-ecommerce.herokuapp.com/" class="grid-item bytene">
           <div>
-            <h3>Horiseon</h3>
-            <span>HTML, CSS</span>
+            <h3>BYTEME</h3>
+            <span>JavaScript, Express, Node, Sql, Handlebar</span>
           </div>
         </a>
         <!-- Project #3 -->
